--- a/web/css/main.css
+++ b/web/css/main.css
@@ -152,7 +152,7 @@ body{
 .menu-category-items{
     display: flex;
     flex-direction: column;
-    margin-left: 80px;
+    margin-left: 77px;
     height: 0px;
     overflow: hidden;
 }
@@ -163,9 +163,18 @@ body{
     color: #788399;
     cursor: pointer;
 }
+.count-place{
+    font-size: 12px;
+    margin-left: 20px;
+    font-family: PT_Sans;
+    color: #a9b0bf;
+    margin-right: 40px;
+}
 .menu-category-item a{
     color: #788399;
     text-decoration: none;
+    display: flex;
+    justify-content: space-between;
 }
 .menu-category-item.selected,
 .menu-category-item.selected a{
