fixed photos section

--- a/web/css/main.css
+++ b/web/css/main.css
@@ -3945,7 +3945,7 @@ a.btn-show-more{
     display:flex;
     align-items: center;
     justify-content: center;
-    padding-top: 20px;
+    margin-top: 20px;
     z-index: 100;
     position: relative;
 }
