--- a/web/css/main.css
+++ b/web/css/main.css
@@ -3420,6 +3420,7 @@ a.btn-show-more{
     text-decoration: none;
     white-space: nowrap;
     text-overflow: ellipsis;
+    cursor: pointer;
 }
 .notif-username:hover{
     text-decoration: underline;
