--- a/web/css/main.css
+++ b/web/css/main.css
@@ -2021,6 +2021,7 @@ a.btn-show-more{
     flex-direction: column;
     margin-top: 30px;
     max-width: 940px;
+    background-color: white;
 }
 .large-wide-button{
     width: 100%;
@@ -2373,19 +2374,24 @@ a.btn-show-more{
 .evaluation:last-child{
     margin-right: 0px;
 }
-.evaluation:nth-child(1):hover{
+.evaluation:nth-child(2):hover,
+.evaluation:nth-child(2).active{
     background-color: #fe4c5a;
 }
-.evaluation:nth-child(2):hover{
+.evaluation:nth-child(3):hover,
+.evaluation:nth-child(3).active{
     background-color: #fd8900;
 }
-.evaluation:nth-child(3):hover{
+.evaluation:nth-child(4):hover,
+.evaluation:nth-child(4).active{
     background-color: #fdbc00;
 }
-.evaluation:nth-child(4):hover{
+.evaluation:nth-child(5):hover,
+.evaluation:nth-child(5).active{
     background-color: #9dc419;
 }
-.evaluation:nth-child(5):hover{
+.evaluation:nth-child(6):hover,
+.evaluation:nth-child(6).active{
     background-color: #26b76c;
 }
 .block-textarea-review{
@@ -2409,7 +2415,11 @@ a.btn-show-more{
 .textarea-review::-webkit-input-placeholder{
     font-size: 15px;
 }
-.container-add-photo{
+.block-tmp-photos{
+    display: flex;
+    flex-wrap: wrap;
+}
+.review-photo-tmp{
     margin-top: 20px;
     width: 154px;
     height: 110px;
@@ -2419,6 +2429,7 @@ a.btn-show-more{
     background-size: cover;
     display: flex;
     justify-content: flex-end;
+    margin-right: 20px;
 }
 .close-promocode{
     display: flex;
@@ -5293,23 +5304,83 @@ form .field-input:first-child{
 
 
 
-.bg-r0{
+.bg-r0,
+.bg-r0\.1,
+.bg-r0\.2,
+.bg-r0\.3,
+.bg-r0\.4,
+.bg-r0\.5,
+.bg-r0\.6,
+.bg-r0\.7,
+.bg-r0\.8,
+.bg-r0\.9
+{
     background-color:#7b7b7b;
 }
-.bg-r1{
+.bg-r1,
+.bg-r1\.1,
+.bg-r1\.2,
+.bg-r1\.3,
+.bg-r1\.4,
+.bg-r1\.5,
+.bg-r1\.6,
+.bg-r1\.7,
+.bg-r1\.8,
+.bg-r1\.9
+{
     background-color:#fe4c5a;
 }
-.bg-r2{
+.bg-r2,
+.bg-r2\.1,
+.bg-r2\.2,
+.bg-r2\.3,
+.bg-r2\.4,
+.bg-r2\.5,
+.bg-r2\.6,
+.bg-r2\.7,
+.bg-r2\.8,
+.bg-r2\.9
+{
     background-color:#fd8900;
 }
 
-.bg-r3{
+.bg-r3,
+.bg-r3\.1,
+.bg-r3\.2,
+.bg-r3\.3,
+.bg-r3\.4,
+.bg-r3\.5,
+.bg-r3\.6,
+.bg-r3\.7,
+.bg-r3\.8,
+.bg-r3\.9
+{
     background-color:#fdbc00;
 }
-.bg-r4{
+.bg-r4,
+.bg-r4\.1,
+.bg-r4\.2,
+.bg-r4\.3,
+.bg-r4\.4,
+.bg-r4\.5,
+.bg-r4\.6,
+.bg-r4\.7,
+.bg-r4\.8,
+.bg-r4\.9
+{
     background-color:#9dc419;
 }
-.bg-r5{
+.bg-r5,
+.bg-r5\.1,
+.bg-r5\.2,
+.bg-r5\.3,
+.bg-r5\.4,
+.bg-r5\.5,
+.bg-r5\.6,
+.bg-r5\.7,
+.bg-r5\.8,
+.bg-r5\.9
+{
     background-color:#26b76c;
 }
 
