--- a/web/css/main.css
+++ b/web/css/main.css
@@ -646,6 +646,16 @@ body{
     max-width: 820px;
     cursor: default;
 }
+.h2-cr{
+    color: #444444;
+    font-family: PT_Sans bold;
+    font-size: 24px;
+    margin-top: 15px;
+    margin-bottom: 20px;
+    margin-left: 80px;
+    max-width: 820px;
+    cursor: default;
+}
 .h2-c span{
     color:#6b778f;
     font-family: PT_Sans;
@@ -1385,20 +1395,13 @@ a.btn-show-more{
     border-radius: 25px;
 }
 .btn-filters:hover,
-.sign-official-answer:hover,
 .btn-filters.active,
 .left-menu.filter .btn-filter:hover,
 .left-menu.filter .btn-filter.active{
     border: 1px solid #4b98df;
     color: #444444;
 }
-.sign-official-answer:hover.sign-official-answer div{
-    background: url("../img/icon-close-min.png") no-repeat -24px 0px;
-}
-.sign-official-answer span{
-    display: inline-block;
-    margin-top: 7px;
-}
+
 .btn-container-filters .name_filters{
     height: 20px;
     margin-left: 16px;
@@ -2091,6 +2094,17 @@ a.btn-show-more{
     display: flex;
     align-items: center;
 }
+.block-reviews .review-header .profile-icon{
+    width: 40px;
+    height: 40px;
+    border-radius: 20px;
+}
+.without_header.block-reviews .review-header .profile-icon{
+    width: 60px;
+    height: 60px;
+    border-radius: 30px;
+}
+
 .block-between{
     width: 100%;
     display: flex;
@@ -2214,6 +2228,9 @@ a.btn-show-more{
     position: relative;
     overflow: hidden;
 }
+.without_header .block-review-content{
+    margin: 0 20px 0 40px;
+}
 .rating-r{
     height: 40px;
     color: #ffffff;
@@ -2245,6 +2262,10 @@ a.btn-show-more{
     padding-right: 10px;
     padding-top: 10px;
 }
+
+.without_header .review-photo{
+    margin-left: 99px;
+}
 .block-total-photo-review{
     display: flex;
     flex-direction: row;
@@ -2269,6 +2290,9 @@ a.btn-show-more{
     align-items: center;
 
 }
+.without_header .review-footer{
+    margin-left: 20px;
+}
 .review-footer-btn{
     font-size: 13px;
     color: #6b778f;
@@ -2277,6 +2301,9 @@ a.btn-show-more{
     display: flex;
     align-items: center;
     cursor: pointer;
+}
+.review-footer-btn:nth-child(2){
+    min-width: 80px;
 }
 .review-footer-btn:hover{
     color: #444444;
@@ -2291,12 +2318,15 @@ a.btn-show-more{
     content: url("../img/icon-like.png");
     margin-right: 10px;
 }
-.review-footer-btn.btn-like:hover:before{
+.review-footer-btn.btn-like:hover:before,
+.review-footer-btn.btn-like.active:before
+{
     content: url("../img/icon-like-active.png");
     margin-right: 10px;
 }
 
-.review-footer-btn.btn-comm:before{
+.review-footer-btn.btn-comm:before,
+.review-footer-btn.hide-comm:before{
     margin-top: 4px;
     content: '';
     margin-right: 10px;
@@ -2305,7 +2335,8 @@ a.btn-show-more{
     background-image: url("../img/icon-comment.png");
     background-position: 0 0;
 }
-.review-footer-btn.btn-comm:hover:before{
+.review-footer-btn.btn-comm:hover:before,
+.review-footer-btn.hide-comm:hover:before{
     background-position: 20px 0;
 }
 .review-show-more{
@@ -2566,24 +2597,34 @@ a.btn-show-more{
     padding-bottom: 20px;
     display: flex;
     border-bottom:1px solid #d3e4ff;
-    display: flex;
+    max-width: 940px;
+    margin-top: 30px;
+    margin-bottom: -30px;
+    background-color: white;
 }
-.btn-sort-reviews{
+.block-sort-reviews a{
+    text-decoration: none;
+}
+a .btn-sort-reviews{
     padding-left: 20px;
     padding-right: 20px;
     margin-left: 7px;
     margin-right: 7px;
     font-size: 14px;
     font-family: PT_Sans bold;
-    height: 37px;
+    height: 35px;
     cursor: pointer;
     display: flex;
     color: #838da1;
+    text-decoration: none;
+    padding-top: 3px;
 }
-.btn-sort-reviews:first-child{
+a:first-child .btn-sort-reviews{
     margin-left: 0px;
 }
-.btn-sort-reviews:hover{
+a .btn-sort-reviews:hover,
+a .btn-sort-reviews.active
+{
     box-shadow: 0 4px 0 0 #a7c9ff;
     color: #444444;
 }
@@ -2711,6 +2752,14 @@ a.btn-show-more{
 .comment-content-header{
     display: flex;
     flex-direction: column;
+}
+.official_answer{
+    margin-top: 20px;
+    padding: 0 20px;
+    background-color: #f7f8fd;
+}
+.official_answer .comment-content{
+    border-top: 0px;
 }
 
 .comment-time{
@@ -3202,6 +3251,9 @@ a.btn-show-more{
     flex-direction: column;
     border-radius: 3px;
     box-shadow: 0px 2px 0px 0px #cdced0;
+}
+.block-сomments-post._reviews{
+    margin-top: 0px;
 }
 .block-issues .container-write-comments,
 .block-сomments-post .container-write-comments{
@@ -4409,7 +4461,8 @@ input.search-selected-field{
 .container-btns-field.open-block-btns{
     max-height: none;
 }
-.btn-time_work{
+.btn-time_work,
+.sign-official-answer{
     margin-bottom: 20px;
     border: 1px solid #d3e4ff;
     font-size: 16px;
@@ -4424,7 +4477,8 @@ input.search-selected-field{
     cursor: pointer;
     margin-right: 20px;
 }
-.btn-time_work:after{
+.btn-time_work:after,
+.sign-official-answer:after{
     content: '';
     display: flex;
     background-image: url("../img/icons_plus.png");
@@ -4433,24 +4487,29 @@ input.search-selected-field{
     height: 22px;
     margin-left: 20px;
 }
-.btn-time_work:hover{
+.btn-time_work:hover,
+.sign-official-answer:hover{
     color: #4b98df;
     border: 1px solid #4b98df;
 }
-.btn-time_work:hover:after{
+.btn-time_work:hover:after,
+.sign-official-answer:hover:after{
     background-position: 22px 0px;
 }
-.btn-time_work.active{
+.btn-time_work.active,
+.sign-official-answer.active{
     color: #4b98df;
     border: 1px solid #4b98df;
 }
-.btn-time_work.active:after{
+.btn-time_work.active:after,
+.sign-official-answer.active:after{
     background-image: url("../img/icons_close.png");
     width: 22px;
     height: 26px;
     background-position: -1px 0px;
 }
-.btn-time_work.active:hover:after{
+.btn-time_work.active:hover:after,
+.sign-official-answer.active:hover:after{
     background-image: url("../img/icons_close.png");
     width: 22px;
     height: 26px;
@@ -4634,24 +4693,12 @@ input.search-selected-field{
 
 .hidden-complaint-message{display: none;}
 .sign-official-answer{
-    border: solid #D3E4FF 1px;
-    color: #788399;
-    height: 30px;
-    width: 276px;
-    margin: 0px 0px 20px 20px;
-    border-radius: 20px;
-    cursor: pointer;
-    padding-left: 10px;
-    font-size: 15px;
-
+    margin: -30px 0px 50px 20px;
+    width: 300px;
+    text-align: center;
 }
-.sign-official-answer div{
-    background: url("../img/icon-close-min.png") no-repeat;
-    height: 25px;
-    width: 25px;
-    float:right;
-    margin: 3px 3px 0px 0px;
-}.official-sign{
+
+.official-sign{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -4666,6 +4713,7 @@ input.search-selected-field{
     margin-left: 20px;
     float: left;
 }
+
 
 .container-cards-promo{
     display: flex;
