--- a/web/css/min-710px.css
+++ b/web/css/min-710px.css
@@ -65,7 +65,8 @@
 .menu-btns-card{
     padding: 15px 0;
 }
-.btn2-menu:hover, .btn2-menu-active {
+.btn2-menu:hover, .btn2-menu-active,
+.btn2-menu:hover, .btn2-menu.active {
     box-shadow: 0px 0px 0px 0px  #a7c9ff;
 }
 
@@ -186,7 +187,7 @@
     margin: 0 20px 0 20px;
 }
 .without_header .review-photo{
-    margin-left: 79px;
+    margin-left: 20px;
 }
 .official_answer .comment-text{
     margin-left: -60px;
