--- a/web/css/min-540px.css
+++ b/web/css/min-540px.css
@@ -136,12 +136,16 @@
     width: 100%;
     z-index: 1;
 }
-.block-write-reviews.active,
-.keyboard-open .block-write-reviews{
+.block-write-reviews.active{
     position: inherit;
 }
-.block-write-reviews.active .profile-user-reviews,
-.keyboard-open .block-write-reviews .profile-user-reviews
+.keyboard-open .block-write-reviews.main-write{
+    display: none;
+}
+.keyboard-open .block-write-reviews.main-write.active{
+    display: flex;
+}
+.block-write-reviews.active .profile-user-reviews
 {
     display: flex;
 }
