--- a/web/css/main.css
+++ b/web/css/main.css
@@ -4063,10 +4063,13 @@ a .btn-sort-reviews.active
 .style-checkbox-chbox:checked + label:before{
     content: url("../img/center-dot.png");
 }
-.btn-setting-save{
+.btn-setting-save,
+.btn-place-save{
     margin-top: -1px;
 }
-.btn-setting-save .large-wide-button{
+.btn-setting-save .large-wide-button,
+.btn-place-save .large-wide-button
+{
     width: calc(100% + 40px);
     margin-left: -20px;
     border-top: 0px;
