--- a/web/css/main.css
+++ b/web/css/main.css
@@ -657,6 +657,7 @@ body{
     margin-top: 50px;
     max-width: 820px;
     cursor: default;
+    line-height: 22px;
 }
 .h2-cr{
     color: #444444;
@@ -4711,6 +4712,7 @@ input.search-selected-field{
 .complain-text{
     font-size: 23px;
     margin-top: 20px;
+    line-height: 16px;
 }
 
 .hidden-complaint-message{display: none;}
