--- a/web/css/min-540px.css
+++ b/web/css/min-540px.css
@@ -82,10 +82,14 @@
     width: 20px;
     height: 20px;
 }
+.profile-icon-menu{
+    width: 35px;
+    height: 35px;
+}
 .profile-icon-menu img{
     width: 35px;
     height: 35px;
-    border-radius: 15px;
+    border-radius: 17px;
 }
 
 .block-social{
