--- a/web/css/main.css
+++ b/web/css/main.css
@@ -3595,7 +3595,8 @@ a .btn-sort-reviews.active
     -moz-border-radius: 50%;
     -webkit-border-radius: 50%;
 }
-.notif-username{
+.notif-username,
+.notif-system-username{
     display: block;
     height: 15px;
     font-size: 14px;
@@ -3605,7 +3606,12 @@ a .btn-sort-reviews.active
     text-decoration: none;
     white-space: nowrap;
     text-overflow: ellipsis;
+}
+.notif-username{
     cursor: pointer;
+}
+.notif-system-username{
+    cursor: default;
 }
 .notif-username:hover{
     text-decoration: underline;
@@ -3631,6 +3637,7 @@ a .btn-sort-reviews.active
     margin-top: 5px;
     color:#6b778f;
     font-size: 12px;
+    cursor: default;
 }
 /*меню уведомлений end*/
 
